# CommentNest

./: .dev.env  Dockerfile  Makefile  README.md  docker-compose.yml  format.sh  pyproject.toml
migrations/versions/: cb19f46bb250_initial_tables_comments.py
src/: dependecy.py  main.py
src/api/v1/routers/: comments.py  ws.py
src/core/: config.py  redis_core.py  websocket_manager.py
src/db/: session.py
src/models/: comment.py
src/repositories/: comment_repo.py
src/schemas/: comment.py
src/services/: comment_cache_service.py  comment_service.py
src/utils/: redis_client.py
static/: index.html
static/css/: style.css
static/js/: script.js
