[project]
name = "commentnest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "fastapi[all]>=0.117.1",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "ruff>=0.13.1",
    "sqlalchemy>=2.0.43",
    "websockets>=12.0",
]
